--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     types: 
       - opened
-  worflow_dispatch:
+  workflow_dispatch:
 jobs:
   deploy:
     runs-on: ubuntu-latest
